--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
+<!DOCTYPE html>
+<html>
+<body>
+
+ <h1>Current Time</h1>
+  
 <p>Date/Time: <span id="datetime"></span></p>
 
 <script>
 var dt = new Date();
 document.getElementById("datetime").innerHTML = dt.toLocaleTimeString();
 </script>
+  
+</body>
+</html>
