--- a/index.html
+++ b/index.html
@@ -7,9 +7,19 @@
 <p>Date/Time: <span id="datetime"></span></p>
 
 <script>
-var dt = new Date();
-document.getElementById("datetime").innerHTML = dt.toLocaleTimeString();
+var timeDisplay = document.getElementById("time");
+
+
+function refreshTime() {
+  var dateString = new Date().toLocaleString("en-US", {timeZone: "America/Sao_Paulo"});
+  var formattedString = dateString.replace(", ", " - ");
+  timeDisplay.innerHTML = formattedString;
+}
+
+setInterval(refreshTime, 1000);
 </script>
-  
+
+<p id="time"></p>
+
 </body>
 </html>
