--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 
  <h1>Current Time</h1>
   
-<p>Date/Time: <span id="datetime"></span></p>
 
 <script>
 var span = document.getElementById('span');
@@ -21,7 +20,9 @@ function time() {
 setInterval(time, 1000);
 </script>
 
-<span id="span"></span>
+<p>Date/Time: <span id="span"></span></p>
+
+ 
 
 </body>
 </html>
