--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ function checkTime(i) {
 
 <body onload="startTime()">
 
-<div id="txt"></div>
+<h1 style="font-size:10vW" id="txt"></h1>
 
 </body>
 </html>
