--- a/index.html
+++ b/index.html
@@ -18,11 +18,16 @@ function checkTime(i) {
     return i;
 }
 </script>
+
+<style>
+    h1 {text-align: center;}
+</style>
+    
 </head>
 
 <body onload="startTime()">
 
-<h1 style="font-size:10vW" id="txt"></h1>
+<h1 style="font-size:30vW" id="txt"></h1>
 
 </body>
 </html>
